Add unbounded integer proposal

--- a/ts.tex
+++ b/ts.tex
@@ -116,6 +116,7 @@
 \include{references}
 \include{featuretest}
 \include{wideinteger}
+\include{unboundedinteger}
 
 %%--------------------------------------------------
 %% appendices
