Add generalized type conversion

--- a/ts.tex
+++ b/ts.tex
@@ -117,6 +117,7 @@
 \include{featuretest}
 \include{wideinteger}
 \include{unboundedinteger}
+\include{gentypeconv}
 
 %%--------------------------------------------------
 %% appendices
