--- a/ts.tex
+++ b/ts.tex
@@ -33,7 +33,7 @@
 \usepackage[pdftex,
             pdftitle={C++ Technical Specification --- Extensions for Numerics},
             pdfsubject={C++ Technical Specification --- Extensions for Numerics},
-            pdfcreator={Alexander Zaitsev},
+            pdfcreator={Lawrence Crowl},
             bookmarks=true,
             bookmarksnumbered=true,
             pdfpagelabels=true,
