--- a/cover-wd.tex
+++ b/cover-wd.tex
@@ -9,8 +9,8 @@
           \textbf{Document Number:} & {\larger\docno}             \\
           \textbf{Date:}            & \reldate                    \\
           \textbf{Revises:}         & \prevdocno                  \\
-          \textbf{Reply to:}        & Alexander Zaitsev           \\
-                                    & zamazan4ik@tut.by
+          \textbf{Reply to:}        & Lawrence Crowl              \\
+                                    & Lawrence@Crowl.org
           \end{tabular}
 }
 \newlength{\hdwidth}
