Add machine abstraction layer (incomplete)

--- a/ts.tex
+++ b/ts.tex
@@ -113,7 +113,8 @@
 \setglobalstyles
 
 \include{intro}
-\include{references}
+\include{machinelayer}
+%%\include{references}
 \include{featuretest}
 \include{wideinteger}
 \include{unboundedinteger}
