--- a/config.tex
+++ b/config.tex
@@ -6,7 +6,11 @@
 \newcommand{\tsver}{201909}
 
 %% Title
+\iffalse %% Uncomment for the TS
 \newcommand{\doctitle}{\Cpp Extensions for Numerics}
+\else
+\newcommand{\doctitle}{\Cpp Numerics Work In Progress}
+\fi
 
 %% Release date
 \newcommand{\reldate}{\today}
