--- a/cover-wd.tex
+++ b/cover-wd.tex
@@ -9,8 +9,10 @@
           \textbf{Document Number:} & {\larger\docno}             \\
           \textbf{Date:}            & \reldate                    \\
           \textbf{Revises:}         & \prevdocno                  \\
-          \textbf{Reply to:}        & Lawrence Crowl              \\
-                                    & Lawrence@Crowl.org
+          \textbf{Reply to:}        & Alexander Zaitsev           \\
+                                    & zamazan4ik@tut.by           \\
+                                    & Antony Polukhin             \\
+                                    & antoshkka@gmail.com, antoshkka@gmail.com  \\
           \end{tabular}
 }
 \newlength{\hdwidth}
@@ -20,8 +22,8 @@
 
 \vspace{2.5cm}
 \begin{center}
-\textbf{\Huge
-Working Draft, \doctitle}
+\textbf{\Huge \iffalse %% Uncomment for the TS
+Working Draft, \fi \doctitle}
 \end{center}
 \vfill
 \textbf{Note: this is an early draft. It's known to be incomplet and
