--- a/gentypeconv.tex
+++ b/gentypeconv.tex
@@ -1,5 +1,6 @@
 %!TEX root = ts.tex
 
+\begin{addedblock}
 \rSec0[generalized_type_conversion]{Generalized Type Conversion}
 
 Conversion between arbitrary numeric types requires something more practical than implementing the full cross product of conversion possibilities.
@@ -15,3 +16,5 @@ The general template conversion algorithm from type \tcode{S} to type \tcode{T} 
 \end{itemize}
 
 We expect common conversions to have specialized implementations.
+
+\end{addedblock}
