--- a/machinelayer.tex
+++ b/machinelayer.tex
@@ -1,5 +1,5 @@
 %!TEX root = ts.tex
-
+\begin{addedblock}
 \rSec0[machine_layer]{Machine Abstraction Layer}
 
 The machine abstraction layer enables a mostly machine-independent implementation of this specification.
@@ -552,3 +552,4 @@ For each of the two add operations above, there is a corresponding subtract oper
 For each of the seven operations above (add+sub+mul), there is a corresponding signed operation. The primary difference between the two is sign extension.
 
 For each of the fourteen operations in above, there is a corresponding operation where the 'right-hand' argument is a pointer to a subarray, which is also of length \tcode{length}.
+\end{addedblock}
