--- a/macros.tex
+++ b/macros.tex
@@ -27,6 +27,20 @@
 {
 \color{black}
 }
+\newenvironment{addmodif}
+{
+\color{blue}
+}
+{
+\color{black}
+}
+\newenvironment{remmodif}
+{
+\color{magenta}
+}
+{
+\color{black}
+}
 \newenvironment{removedblock}
 {
 \color{remclr}
