--- a/intro.tex
+++ b/intro.tex
@@ -4,13 +4,25 @@
 
 \rSec1[mission]{Mission}
 
+\iffalse %% Uncomment for the TS
 The mission of this specification is to make numbers easier to use.
+\else
+The mission of this document is to collect different numbers related proposals in one to make it simpler to discover issues and to simplify editors work of porting the papers to \LaTeX (all the \LaTeX sources are awailable at https://github.com/ZaMaZaN4iK/numeric-papers-in-latex.git ).
+\fi
 
-\rSec1[scope]{Scope}
+\rSec1[intro.style]{Style of presentation}
+Existing wording from the C++ working draft - included to provide context - is presented without decoration.
 
-This specification provides numbers and their options, but does not provide algorithms or special functions.
+\begin{addedblock}
+Entire clauses / subclauses / paragraphs incorporated from different numbers related proposals are presented in a distinct cyan
+color.
+\end{addedblock}
 
-\rSec1[design]{Design principles}
+\rSec1[intro.scope]{Scope}
+
+This document provides numbers and their options, but does not provide algorithms or special functions.
+
+\rSec1[intro.design]{Design principles}
 
 Follow mathematical behavior where feasible.
 
@@ -69,7 +81,7 @@ Ease extension.
 \item Expose sound "building-block" abstractions.
 \end{itemize}
 
-\rSec1[taxonomy]{Number type taxonomy}
+\rSec1[intro.taxonomy]{Number type taxonomy}
 
 Types may be categorized by the representation constancy between argument and result.
 
@@ -90,7 +102,8 @@ All aspects of the representation are dynamic. Overflow is variables is avoided.
 
 Types may also be categorized by the size specification, which is generally by the number of bits in the representation or by the number of digits required.
 
-\rSec0[operations]{Operations}
+\begin{addedblock}
+\rSec0[intro.operations]{Operations}
 
 The various types will share many operations. To reduce suprise, these operations should have consistent names for consistent purposes.
 
@@ -215,3 +228,5 @@ The various types will share many operations. To reduce suprise, these operation
 \\ \rowsep
     
 \end{libreqtab3}    
+
+\end{addedblock}
