--- a/styles.tex
+++ b/styles.tex
@@ -23,8 +23,11 @@
 \makepagestyle{cpppage}
 \makeevenhead{cpppage}{\textbf{\docno}}{}{}
 \makeoddhead{cpppage}{\textbf{\docno}}{}{}
+
+\iffalse %% Uncomment for the TS
 \makeevenfoot{cpppage}{\leftmark}{\copyright\,ISO/IEC {\copyrightyear} -- All rights reserved}{\thepage}
 \makeoddfoot{cpppage}{\leftmark}{\copyright\,ISO/IEC {\copyrightyear} -- All rights reserved}{\thepage}
+\fi
 
 \makeatletter
 \makepsmarks{cpppage}{%
